# shematehnik

.claude/commands/: firmware-project.md  git.md  ucp-build.md  ucp-impl-ai-schematic.md  ucp-impl-autosave.md  ucp-impl-ci.md  ucp-impl-component-rotation.md  ucp-impl-eventbus-unsub.md  ucp-impl-footprint-flip.md  ucp-impl-kicad-import.md  ucp-impl-net-labels.md  ucp-impl-ota-flash.md  ucp-impl-pcb-drc.md  ucp-impl-pid-plot.md  ucp-impl-pid-serial.md  ucp-impl-project-save.md  ucp-impl-ratsnest.md  ucp-impl-stable-api.md  ucp-impl-wasm.md  ucp-impl-wire-routing.md  ucp-impl-wire-serial.md  ucp-roadmap.md  ucp-test.md  ucp-web-impl-ai.md  ucp-web-impl-analyzer.md  ucp-web-impl-ee-calculators.md  ucp-web-impl-fsm.md  ucp-web-impl-library.md  ucp-web-impl-logic-analyzer.md  ucp-web-impl-new-modules.md  ucp-web-impl-ota.md  ucp-web-impl-pcb-drc.md  ucp-web-impl-pcb-edit.md  ucp-web-impl-pin-planner.md  ucp-web-impl-power-budget.md  ucp-web-impl-project-v2.md  ucp-web-impl-register-map.md  ucp-web-impl-sch-ux.md  ucp-web-impl-serial.md  ucp-web-impl-spice-nonlinear.md  (+6 more)
.github/workflows/: ci.yml  deploy-web.yml
platform_app/: README.md
platform_app/web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
platform_app/web/wasm/: CMakeLists.txt  README.md  bindings.cpp  build.sh  ucp_core.cpp  ucp_core.hpp  ucp_csg.cpp  ucp_csg.hpp
platform_app/wiki/: AGENTS.md  index.md  log.md  overview.md  philosophy.md  roadmap-web.md  roadmap.md  skills.md  user_guide.md
platform_app_lab/: README.md
(+145 files in other folders)
